# Aurora

./: .gitignore  .gitmodules  Aurora.sln  README.md  build  premake5.lua
Aurora/: Aurora.vcxproj  Aurora.vcxproj.filters  CMakeLists.txt
Aurora.xcworkspace/: contents.xcworkspacedata
Aurora.xcworkspace/xcuserdata/alimilhim.xcuserdatad/: UserInterfaceState.xcuserstate
Aurora.xcworkspace/xcuserdata/alimilhim.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Aurora/Aurora.xcodeproj/: project.pbxproj
Aurora/src/: Aurora.h  aurpch.cpp  aurpch.h
Aurora/src/Aurora/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Aurora/src/Aurora/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Aurora/src/Aurora/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Aurora/src/Aurora/Platform/OpenGL/: imgui_impl_opengl3.cpp
Aurora/src/Aurora/Platform/Windows/: WinWindow.cpp  WinWindow.h  WindowsInput.cpp  WindowsInput.h
SandBox/: SandBox.vcxproj  imgui.ini
SandBox/SandBox.xcodeproj/: project.pbxproj
SandBox/SandBox.xcodeproj/xcuserdata/alimilhim.xcuserdatad/xcschemes/: xcschememanagement.plist
SandBox/src/: App.cpp
